--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,13 +5,14 @@ body {
 
 a {
   text-decoration: none;
+  color: #333;
 }
 
 ul, li, ol {
   list-style: none;
 }
 
-img, button, li {
+img, button {
   cursor: pointer;
 }
 
